Implement integration tests, update `Expand` logic, rename data set.
Signed-off-by: currantw <taylor.curran@improving.com>